@@ -1,6 +1,7 @@
 2004-07-11  John Luke  <jluke@cfl.rr.com>
 
 	* en/Vte*: some Vte docs
+	* en/Pango/Context.xml: doc'ed
 
 2004-07-07  Jasper Van Putten <jaspervp@gmx.net>
 
